--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -42,4 +42,11 @@ cursor: pointer;
     color: #fff;
     font-size: 25px;
     font-weight: 500;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.container .index {
+    margin: auto;
+    font-size: 18px;
 }
