--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 *{
   margin: 0;
+  padding: 0;
 }
 body {
   height: 100vh;
   background-image: linear-gradient(#eaafc8, #654ea3);
+  font-family: 'poppins';
 }
 
